--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "start": "node src/index.js",
     "buildFront": "npx tsc -p tsconfig.front.json",
     "buildBack": "npx tsc -p tsconfig.back.json",
-    "styles": "npx tailwind -i ./public/tailwind.css -o ./public/styles.css --watch",
-    "stylesAdmin": "npx tailwind -i ./admin/tailwind.css -o ./admin/daisy.css --watch",
-    "dev": "concurrently -k -n BACKEND,FRONTEND,STYLES,STYLESADMIN \"tsc -p tsconfig.back.json --watch\" \"nodemon --watch src -e js,ts src/index.js\" \"tsc -p tsconfig.front.json --watch\" \"tailwind -i ./public/tailwind.css -o ./public/styles.css --watch\" \"tailwind -i ./admin/tailwind.css -o ./admin/daisy.css --watch\""
+    "dev": "concurrently -k -n BACKEND,FRONTEND \"tsc -p tsconfig.back.json --watch\" \"nodemon --watch src -e js,ts src/index.js\" \"tsc -p tsconfig.front.json --watch\""
   },
-  "author": "",
+  "author": "Emperor Bob",
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.4",
@@ -40,11 +38,9 @@
     "@types/node": "^20.14.0",
     "@types/route-cache": "^0.5.5",
     "concurrently": "^9.2.1",
-    "daisyui": "^4.11.1",
     "eslint": "^9.6.0",
     "globals": "^15.6.0",
     "nodemon": "^3.1.11",
-    "tailwindcss": "^3.4.3",
     "tsx": "^4.11.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.14.1"
